# bit_shell

./: AGENTS.md  README.md  meson.build
core/: build_info.h.in  meson.build
core/frontends/bit_bar/: bar_app.c  bar_app.h  bar_view_model.c  bar_view_model.h  clock_widget.c  clock_widget.h  main.c  tray_controller.c  tray_controller.h  tray_icon_resolver.c  tray_icon_resolver.h  tray_icon_resolver_test.c  tray_item_button.c  tray_item_button.h  tray_menu_bridge.c  tray_menu_bridge.h  tray_menu_roundtrip_test.c  tray_menu_ux_test.c  tray_menu_view.c  tray_menu_view.h  tray_strip.c  tray_strip.h
core/frontends/bit_dock/: dock_app.c  dock_app.h  dock_layout.c  dock_layout.h  main.c
core/frontends/common/: ipc_client.c  ipc_client.h
core/model/: config.c  config.h  ipc.c  ipc.h  snapshot.c  snapshot.h  tray_menu.c  tray_menu.h  types.h
core/niri/: niri_backend.c  niri_backend.h
core/services/: app_registry.c  app_registry.h  dock_service.c  dock_service.h  launcher_service.c  launcher_service.h  settings_service.c  settings_service.h  tray_menu_service.c  tray_menu_service.h  tray_service.c  tray_service.h  workspace_service.c  workspace_service.h
core/shelld/: app.c  app.h  command_router.c  command_router.h  config_watcher.c  config_watcher.h  ipc_server.c  ipc_server.h  main.c
core/state/: state_store.c  state_store.h
doc/: README.md
doc/00-overview/: constants.md  glossary.md  project-scope.md  references.md  roadmap.md
doc/10-architecture/: event-and-state-flow.md  ipc-contract.md  system-architecture.md
doc/20-components/: bit_bar.md  bit_dock.md  bit_launchpad.md  bit_shelld.md
doc/30-platform/: niri-ipc-event-stream.md  wayland-niri-integration.md
doc/40-ui/: interaction-and-layout.md  layer-shell-surfaces.md
doc/50-models/: app-window-matching.md  desktop-entry-and-menu.md  status-notifier-item.md
doc/60-runtime/: config-and-state.md  niri-session-lifecycle.md  systemd-user-services.md
doc/90-adr/: ADR-0001-doc-structure.md
scripts/: README.md
scripts/devtools/: README.md  bit_dock_abcd_mem_probe.sh  bit_dock_mem_probe.sh
scripts/startup/: README.md  start_bit_dock.sh  start_bit_shelld.sh
